manifests/system/03-monitoring/03-prometheus/03-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-persistent
  namespace: monitoring
spec:
  type: ClusterIP
  ports:
  - name: web
    port: 9090
    targetPort: 9090
  selector:
    prometheus: prometheus-persistent
